- margin footer top to ensure no overlap

--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@
 }
 
 #footer-margin {
-    margin-bottom: 200px;
+    margin-top: 400px;
 }
 
 @media only screen and (max-width: 991px) {
